Updated last corpus+lexicon case study to use two lexica

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -28,9 +28,9 @@
     " * [Retrieve synonyms from DiaMaNT, look up in Gysseling](#synonyms-diamant-gysseling)\n",
     " * [Build a frequency list of the lemma of some corpus output](#freq-lemma-corpus)\n",
     " * [Find occurences of attributive adjectives not ending with -e, even though they are preceeded by a definite article](#adjective-e)\n",
-    " * [Look up inflected forms and spelling variants for a given lemma in a corpus](#inflected-spelling-corpus)\n",
-    " * [Corpus frequency list of lemmata from lexicon with given POS](#corpus-frequency-lemma-pos)\n",
-    " * [Build a frequency table of some corpus, based on lemma list of a given lexicon](#freqtable-lemmalist)\n",
+    " * [Look up inflected forms and spelling variants for a given word form in a corpus](#inflected-spelling-corpus)\n",
+    " * [Corpus frequency list of word forms from lexicon with given lemma](#corpus-frequency-lemma-pos)\n",
+    " * [Build a frequency table of some corpus, based on word forms list of a given lexicon](#freqtable-lemmalist)\n",
     " * [Search corpus for wordforms of lemma not included in lexicon](#corpus-wordforms-not-lexicon)\n",
     " \n",
     "### Treebanks\n",
@@ -615,8 +615,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Corpus frequency list of lemmata from lexicon with given lemma <a class=\"anchor\" id=\"corpus-frequency-lemma-pos\"></a>\n",
-    "Build a function with which we can gather all lemmata of a lexicon with a given lemma, and use that function to build a frequency list of those lemmata in a corpus"
+    "### Corpus frequency list of word forms from lexicon with given lemma <a class=\"anchor\" id=\"corpus-frequency-lemma-pos\"></a>\n",
+    "Build a function with which we can gather all word forms for a lemma from a lexicon, and use that function to build a frequency list of those lemmata in a corpus"
    ]
   },
   {
@@ -774,14 +774,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-06T17:09:38.260298Z",
      "start_time": "2019-03-06T17:09:38.236906Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding missing wordforms in a lexicon can take a long time...\n",
+      "denken|doen|hebben|maken\n",
+      "denken\n",
+      "hebben\n",
+      "maken\n",
+      "doen\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lemma</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>known_wordforms</th>\n",
+       "      <th>unknown_wordforms</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lemmata</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>denkenVERB</th>\n",
+       "      <td>denken</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>{dagt, gedagt, deynck, denck, denc, denken, dyncken, dochte, deynckt, dachte, gedagte, dincken, gedacht, denct, dachten, deink, dencken, denk, gedachte, denkende, denckt, dacht, dijncken, docht, denkt, gedaghte, dogt, denkend}</td>\n",
+       "      <td>{denke,, den, gedocht, gedogt, gedogt:, denkke, gedoght, dencken,, deijncken, gedaght, gedag, dache, gaedoght, dagten, denckende, denken,, dogten, dagt,, denken;, dinkende, deunkt, gedagd, denkt., […]denk, gedat, dog, ken, denckke, dincke, daght, dinkt, dejnck, denken., gedagt,, denkt,, dinck, dink, dogtende, dagte, dencke, deincken, deincke, dijncke, denckt,, deinck, dinke, daechken, denke}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hebbenVERB</th>\n",
+       "      <td>hebben</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>{hebjet, hadde, hadd', hebbend', heef, hadden, heuj, gehad, hebben, hadt, hebbende, heet, hevet, s'heeft, heuet, hads, hei'j, het, hebbent, he'k, haddet, heit, hadts, hebbet, hebbene, heb, had, hebbe, hadjet, ghehadt, hed, heeft, hebbens, hait, heift, heyt, heeftet, hebt, ha}</td>\n",
+       "      <td>{heijt, aede, in, hel, gehat, gehadt,, heijbn, haden, hebben;, hyd,, gehaad,, heft, ?hebben, hatte, ade, aette, hebbende,, heb[…], hebb’, hadde:, hebbee, hadde?, gehadt., ghehat, gehdt, hadde;, hd, heff, heevt, heb?, gehatden, eeft, hebbende., hebben:, eft, hebbe., hebe, adden, hep, hebt;, hebbend, heftd, hedd, hebbt,, ad, g´had, hebbe,,, heeft., ahdde, op, heeft:, hebben,, haede, hebt:, hebbende/, hebd, ghehaet, hadden;, heb;, ebbe, hadt,, geadt,, hebbende), hadan, aebt, hijt, haaden, hadde,, heeft!, heeft,, hhebben, heeben, ghehad, hebben., heben, hebbe:, hade,, [.]hebt, gheadt, hadden,, aeb, heeft;, hebt., aebbe, geadt, haade, had,, hebbe;, heft,, hebbt, hbben, haat, den, gedadt, hept, gead, gehad,, hedde, heeft?, heeft), ...}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>makenVERB</th>\n",
+       "      <td>maken</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>{gemaekt, maken, makende, maekt, gemaect, maect, gemaakte, maeckende, making, maeckt, maecken, maek, maak, maakende, maakte, gemaeckt, maeckty, maeken, makent, maekte, ghemaeckt, maectes, gemaakt, ghemaect, maaken, maakt, maecke, gemaackt, gemaeckte, maeck, maket, mieken, maeckte, maakten, maeckten, maecte, maecktet}</td>\n",
+       "      <td>{maeken,, maecken., maackt, gemaeckts, maakt,, maekt,, maeckken, maake,, maeckt,, maaekke, ma, gemaec, gemakt, maakt., maken,, ghemaeck, gemaeckt_, gemaeck, maaken:, maeckdt, macken, maken., mackten, maakende:, maak,, gemaakt., mack, ken, maecquen,, mackt, make, gemackt, maak:, makende,, ghemackt, maaktte!, maeke, maakte,, gemaakt,, gemaeckt,, maaken;, ge, miek, gaemaght, maecke,, gemaeket, maaken., ghe, maecken,, macke, maaken,, maake, maacken,, gemaekt,, maeke.}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>doenVERB</th>\n",
+       "      <td>doen</td>\n",
+       "      <td>VERB</td>\n",
+       "      <td>{doens, déden, deden, doetse, doed, ge-daan, doende, deê, doeget, doetet, dade, ded', doeghet, doetmen, gedaen, deen, de'e, deeden, deên, deet, doet, duut, doeter, dee, deed'et, doetje, de, dede, ghedaen, doe', doeje, doedegij, deed-je, dee', deed, doen, gedaan, gedane, doene, doe}</td>\n",
+       "      <td>{deede,, dud, doete, done, daat, dede,, toen, doenen,, doon., daen, don, doed,, doen?, do, duende, doenne, doen,, duen, gedaen., gedaan,, ge-, dooe, det, gedan, doon, deedt, doeen, doen,,, doenen, doet:, duet, doijen, doen;, doende,, deeden,, doenden, doet;, dut, donde, dot, deede, doot, daan, gedn, doet,, ge, dooen, doek, gedaen,, doen., gedaan., […]gedaen, dun, doend, dedt, doedt, doen!, dan, doende), doin, dod, gedaan;, doudt, af, gedant, doen:, doe., doe,}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             lemma   pos  \\\n",
+       "lemmata                    \n",
+       "denkenVERB  denken  VERB   \n",
+       "hebbenVERB  hebben  VERB   \n",
+       "makenVERB    maken  VERB   \n",
+       "doenVERB      doen  VERB   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                                                           known_wordforms  \\\n",
+       "lemmata                                                                                                                                                                                                                                                                                                                                      \n",
+       "denkenVERB                                                                                              {dagt, gedagt, deynck, denck, denc, denken, dyncken, dochte, deynckt, dachte, gedagte, dincken, gedacht, denct, dachten, deink, dencken, denk, gedachte, denkende, denckt, dacht, dijncken, docht, denkt, gedaghte, dogt, denkend}   \n",
+       "hebbenVERB                                            {hebjet, hadde, hadd', hebbend', heef, hadden, heuj, gehad, hebben, hadt, hebbende, heet, hevet, s'heeft, heuet, hads, hei'j, het, hebbent, he'k, haddet, heit, hadts, hebbet, hebbene, heb, had, hebbe, hadjet, ghehadt, hed, heeft, hebbens, hait, heift, heyt, heeftet, hebt, ha}   \n",
+       "makenVERB   {gemaekt, maken, makende, maekt, gemaect, maect, gemaakte, maeckende, making, maeckt, maecken, maek, maak, maakende, maakte, gemaeckt, maeckty, maeken, makent, maekte, ghemaeckt, maectes, gemaakt, ghemaect, maaken, maakt, maecke, gemaackt, gemaeckte, maeck, maket, mieken, maeckte, maakten, maeckten, maecte, maecktet}   \n",
+       "doenVERB                                        {doens, déden, deden, doetse, doed, ge-daan, doende, deê, doeget, doetet, dade, ded', doeghet, doetmen, gedaen, deen, de'e, deeden, deên, deet, doet, duut, doeter, dee, deed'et, doetje, de, dede, ghedaen, doe', doeje, doedegij, deed-je, dee', deed, doen, gedaan, gedane, doene, doe}   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              unknown_wordforms  \n",
+       "lemmata                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \n",
+       "denkenVERB                                                                                                                                                                                                                                                                                                                                                           {denke,, den, gedocht, gedogt, gedogt:, denkke, gedoght, dencken,, deijncken, gedaght, gedag, dache, gaedoght, dagten, denckende, denken,, dogten, dagt,, denken;, dinkende, deunkt, gedagd, denkt., […]denk, gedat, dog, ken, denckke, dincke, daght, dinkt, dejnck, denken., gedagt,, denkt,, dinck, dink, dogtende, dagte, dencke, deincken, deincke, dijncke, denckt,, deinck, dinke, daechken, denke}  \n",
+       "hebbenVERB  {heijt, aede, in, hel, gehat, gehadt,, heijbn, haden, hebben;, hyd,, gehaad,, heft, ?hebben, hatte, ade, aette, hebbende,, heb[…], hebb’, hadde:, hebbee, hadde?, gehadt., ghehat, gehdt, hadde;, hd, heff, heevt, heb?, gehatden, eeft, hebbende., hebben:, eft, hebbe., hebe, adden, hep, hebt;, hebbend, heftd, hedd, hebbt,, ad, g´had, hebbe,,, heeft., ahdde, op, heeft:, hebben,, haede, hebt:, hebbende/, hebd, ghehaet, hadden;, heb;, ebbe, hadt,, geadt,, hebbende), hadan, aebt, hijt, haaden, hadde,, heeft!, heeft,, hhebben, heeben, ghehad, hebben., heben, hebbe:, hade,, [.]hebt, gheadt, hadden,, aeb, heeft;, hebt., aebbe, geadt, haade, had,, hebbe;, heft,, hebbt, hbben, haat, den, gedadt, hept, gead, gehad,, hedde, heeft?, heeft), ...}  \n",
+       "makenVERB                                                                                                                                                                                                                                                                                  {maeken,, maecken., maackt, gemaeckts, maakt,, maekt,, maeckken, maake,, maeckt,, maaekke, ma, gemaec, gemakt, maakt., maken,, ghemaeck, gemaeckt_, gemaeck, maaken:, maeckdt, macken, maken., mackten, maakende:, maak,, gemaakt., mack, ken, maecquen,, mackt, make, gemackt, maak:, makende,, ghemackt, maaktte!, maeke, maakte,, gemaakt,, gemaeckt,, maaken;, ge, miek, gaemaght, maecke,, gemaeket, maaken., ghe, maecken,, macke, maaken,, maake, maacken,, gemaekt,, maeke.}  \n",
+       "doenVERB                                                                                                                                                                                                                                                                                       {deede,, dud, doete, done, daat, dede,, toen, doenen,, doon., daen, don, doed,, doen?, do, duende, doenne, doen,, duen, gedaen., gedaan,, ge-, dooe, det, gedan, doon, deedt, doeen, doen,,, doenen, doet:, duet, doijen, doen;, doende,, deeden,, doenden, doet;, dut, donde, dot, deede, doot, daan, gedn, doet,, ge, dooen, doek, gedaen,, doen., gedaan., […]gedaen, dun, doend, dedt, doedt, doen!, dan, doende), doin, dod, gedaan;, doudt, af, gedant, doen:, doe., doe,}  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c12421a2818d461ea6d6b0b20200a407",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Label(value='Sla uw resultaten op:'), Text(value='mijn_resultaten.csv'), Button(button_style='w…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from chaininglib.search.LexiconQuery import *\n",
     "from chaininglib.search.CorpusQuery import *\n",
@@ -792,18 +912,21 @@
     "# It will return a Pandas DataFrame associating lemmata to their paradigms ('known_wordforms' column) and\n",
     "# missing wordforms found in the corpus ('unknown_wordforms' column).\n",
     "\n",
-    "def get_missing_wordforms(lexicon, lemma, corpus):    \n",
+    "def get_missing_wordforms(lexicon_lemmas, lexicon_wordforms, lexicon_pos, corpus_pos, corpus):    \n",
     "    \n",
     "    print('Finding missing wordforms in a lexicon can take a long time...');\n",
     "    \n",
     "    # LEXICON: \n",
     "    # get a lemmata list having a given part-of-speech\n",
     "    \n",
-    "    lq = create_lexicon(lexicon).lemma(lemma).search()\n",
+    "    lq = create_lexicon(lexicon_lemmas).pos(lexicon_pos).search()\n",
     "    df_lexicon = lq.kwic()\n",
     "    \n",
     "    # Put the results into an array, so we can loop through the list of lemmata\n",
     "    lexicon_lemmata_arr = [w.lower() for w in df_lexicon[\"wordform\"]]\n",
+    "    \n",
+    "    # Test array, instead of querying Molex\n",
+    "    #lexicon_lemmata_arr = [\"denken\", \"doen\", \"hebben\", \"maken\"]\n",
     "    \n",
     "    # Prepare the output:\n",
     "    # instantiate a DataFrame for storing lemmata and mssing wordforms\n",
@@ -829,7 +952,8 @@
     "        # join set of lemmata to send them in a query all at once\n",
     "        # beware: single quotes need escaping\n",
     "        lemmata_list = \"|\".join(small_lemmata_arr).replace(\"'\", \"\\\\\\\\'\")\n",
-    "        cq = create_corpus(corpus).pattern(r'[lemma=\"' + lemmata_list + r'\" & pos=\"'+pos+'\"]').search()\n",
+    "        print(lemmata_list)\n",
+    "        cq = create_corpus(corpus).pattern(r'[lemma=\"' + lemmata_list + r'\" & pos=\"'+corpus_pos+'\"]').search()\n",
     "        df_corpus = cq.kwic()\n",
     "        \n",
     "        # if the corpus gave results,\n",
@@ -839,9 +963,9 @@
     "        if (len(df_corpus)>0):\n",
     "            small_lemmata_set = set(small_lemmata_arr)\n",
     "            for one_lemma in small_lemmata_set: \n",
-    "                \n",
+    "                print(one_lemma)\n",
     "                # look up the known wordforms in the lexicon\n",
-    "                ql = create_lexicon(lexicon).lemma(one_lemma).pos(pos).search()\n",
+    "                ql = create_lexicon(lexicon_wordforms).lemma(one_lemma).search()\n",
     "                df_known_wordforms = ql.kwic()\n",
     "                \n",
     "                # we have a lexicon paradigm to compare, do the job now\n",
@@ -865,9 +989,9 @@
     "                        # Part-of-speech is needed to distinguish homonyms with different grammatical categories.\n",
     "                        # Of course, we need to take glosses into account too to do a truely correct job\n",
     "                        # But we didn't do it here\n",
-    "                        key = one_lemma + pos\n",
+    "                        key = one_lemma + lexicon_pos\n",
     "                        df_enriched_lexicon.at[key, 'lemma'] = one_lemma\n",
-    "                        df_enriched_lexicon.at[key, 'pos'] = pos\n",
+    "                        df_enriched_lexicon.at[key, 'pos'] = lexicon_pos\n",
     "                        df_enriched_lexicon.at[key, 'known_wordforms'] = known_wordforms\n",
     "                        df_enriched_lexicon.at[key, 'unknown_wordforms'] = unknown_wordforms\n",
     "                \n",
@@ -877,13 +1001,13 @@
     "\n",
     "# Run the function!\n",
     "\n",
-    "# TODO: change corpora\n",
-    "base_lexicon=\"lexicon_service_db\"\n",
-    "corpus_to_search=\"gysseling\"\n",
+    "lexicon_lemmas=\"molex\"\n",
+    "lexicon_wordforms=\"lexicon_service_db\"\n",
+    "corpus_to_search=\"zeebrieven\"\n",
     "\n",
     "lemma=\"boek\"\n",
     "\n",
-    "df = get_missing_wordforms(base_lexicon, lemma, corpus_to_search)\n",
+    "df = get_missing_wordforms(lexicon_lemmas, lexicon_wordforms, \"VERB\", \"VRB\", corpus_to_search)\n",
     "\n",
     "# After such a heavy process, it's a good idea to save the results\n",
     "\n",
@@ -1000,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
