updated install script and links in notebooks

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Examples Chaining search\n",
-    "This notebook contains a number of examples of chaining linguistic resources: corpora, lexica and treebanks. Try the examples, or copy the code and customize the examples in the [Sandbox](Sandbox.ipynb).\n"
+    "This notebook contains a number of examples of chaining linguistic resources: corpora, lexica and treebanks. Try the examples, or copy the code and customize the examples in the [Sandbox](Sandbox.ipynb).\n",
+    "\n",
+    "If you encounter any bugs or errors, please let us know via our [GitHub issue tracker](https://github.com/INL/chaining-search/issues) or send an e-mail to servicedesk@ivdnt.org.\n"
    ]
   },
   {
@@ -320,8 +322,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T11:18:40.973343Z",
-     "start_time": "2019-03-21T11:17:44.001751Z"
+     "end_time": "2019-03-22T13:25:41.896444Z",
+     "start_time": "2019-03-22T13:24:44.095470Z"
     }
    },
    "outputs": [],
@@ -493,8 +495,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T11:10:04.501764Z",
-     "start_time": "2019-03-21T11:09:17.928456Z"
+     "end_time": "2019-03-22T13:43:07.164023Z",
+     "start_time": "2019-03-22T13:28:45.719971Z"
     }
    },
    "outputs": [],
@@ -506,7 +508,7 @@
     "# do some corpus search\n",
     "print('This can take a few seconds... please wait!')\n",
     "\n",
-    "corpus_to_search=\"zeebrieven\"\n",
+    "corpus_to_search=\"chn-extern\"\n",
     "df_corpus = create_corpus(corpus_to_search).detailed_context(True).pos(\"NOU.*\").search().kwic()\n",
     "\n",
     "# compute and display a table of the frequencies of the lemmata\n",
