Added quickstart pdf to sphinx doc and notebook

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -6,8 +6,9 @@
    "source": [
     "# Examples Chaining search\n",
     "This notebook contains a number of examples of chaining linguistic resources: corpora, lexica and treebanks. Try the examples, or copy the code and customize the examples in the [Sandbox](Sandbox.ipynb).\n",
-    "\n",
-    "If you encounter any bugs or errors, please let us know via our [GitHub issue tracker](https://github.com/INL/chaining-search/issues) or send an e-mail to servicedesk@ivdnt.org.\n"
+    " * For a tutorial, refer to our [Quickstart](Quickstart.pdf).\n",
+    " * Reference of our library *chaininglib*, [described in the documentation](doc/_build/html/index.html).\n",
+    " * If you encounter any bugs or errors, please let us know via our [GitHub issue tracker](https://github.com/INL/chaining-search/issues) or send an e-mail to servicedesk@ivdnt.org.\n"
    ]
   },
   {
@@ -2179,7 +2180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
