--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -7,7 +7,8 @@
     "# *Chaining search*: Sandbox\n",
     "\n",
     "Use this notebook to combine linguistic resources yourself: corpora, lexica and treebanks. \n",
-    " * Use methods from our library *chaininglib*, [described in the documentation](doc/_build/html/index.html)\n",
+    " * For a tutorial, refer to our [Quickstart](Quickstart.pdf).\n",
+    " * Use methods from our library *chaininglib*, [described in the documentation](doc/_build/html/index.html).\n",
     " * To get an idea of the possibilities and to copy code, go to the [Examples notebook](Examples.ipynb).\n",
     " * If you encounter any bugs or errors, please let us know via our [GitHub issue tracker](https://github.com/INL/chaining-search/issues) or send an e-mail to servicedesk@ivdnt.org."
    ]
