Added more explanation and link to read the docs

--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Use this notebook to combine linguistic resources yourself: corpora, lexica and treebanks. \n",
     " * For a tutorial, refer to our [Quickstart](Quickstart.pdf).\n",
-    " * Use methods from our library *chaininglib*, [described in the documentation](doc/_build/html/index.html).\n",
+    " * Use methods from our library *chaininglib*, described in the documentation ([local](doc/_build/html/index.html) or [online](https://chaining-search.readthedocs.io/en/latest/)).\n",
     " * To get an idea of the possibilities and to copy code, go to the [Examples notebook](Examples.ipynb).\n",
     " * If you encounter any bugs or errors, please let us know via our [GitHub issue tracker](https://github.com/INL/chaining-search/issues) or send an e-mail to servicedesk@ivdnt.org."
    ]
@@ -18,32 +18,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-25T10:54:22.275296Z",
-     "start_time": "2019-03-25T10:22:29.979983Z"
+     "end_time": "2019-04-08T11:56:27.413538Z",
+     "start_time": "2019-04-08T11:56:27.409911Z"
     }
    },
    "outputs": [],
    "source": [
-    "#import chaininglib\n",
-    "from chaininglib.search.CorpusQuery import *\n",
-    "from chaininglib.process.corpus import *\n",
-    "from chaininglib.ui.dfui import *\n",
-    "\n",
-    "# do some corpus search\n",
-    "print('This can take a few seconds... please wait!')\n",
-    "for one_corpus in get_available_corpora():\n",
-    "    print(one_corpus)\n",
-    "    #c = create_corpus(one_corpus).lemma(\"woordenboek\").detailed_context(True).search()\n",
-    "    #df_corpus = c.kwic()\n",
-    "\n",
-    "corpus_to_search=\"chn-extern\"\n",
-    "#corpus_to_search=\"zeebrieven\"\n",
-    "df_corpus = create_corpus(corpus_to_search).detailed_context(True).pos(\"NOU.*\").search().kwic()\n",
-    "print('done here')\n",
-    "# compute and display a table of the frequencies of the lemmata\n",
-    "\n",
-    "freq_df = get_frequency_list(df_corpus)\n",
-    "display_df(freq_df)"
+    "import chaininglib\n"
    ]
   },
   {
