Changed corpora urls

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -68,7 +68,7 @@
     "* Choose one of the corpora:\n",
     "  * **zeebrieven**: The Brieven als Buit (Letters as Loot) corpus, consisting of 17th and 18th century letters from Dutch sailors\n",
     "  * **gysseling**: Corpus Gysseling, 13th century Dutch\n",
-    "  * **chn-extern**: Externally accessible part of the Corpus Hedendaags Nederlands. Corpus of contemporary Dutch from the Dutch Antilles and Suriname, retrieved from newspapers and websites.\n",
+    "  * **openchn**: Externally accessible part of the Corpus Hedendaags Nederlands. Corpus of contemporary Dutch from the Dutch Antilles and Suriname, retrieved from newspapers and websites.\n",
     "  * **opus**: OPUS corpus of Dutch subtitles"
    ]
   },
@@ -456,7 +456,7 @@
     "# do some corpus search\n",
     "print('This can take a few seconds... please wait!')\n",
     "\n",
-    "corpus_to_search=\"chn-extern\"\n",
+    "corpus_to_search=\"openchn\"\n",
     "df_corpus = create_corpus(corpus_to_search).detailed_context(True).pos(\"NOU.*\").search().kwic()\n",
     "\n",
     "# compute and display a table of the frequencies of the lemmata\n",
@@ -493,7 +493,7 @@
     "from chaininglib.utils.dfops import df_filter\n",
     "from chaininglib.ui.dfui import display_df\n",
     "\n",
-    "corpus_to_search=\"chn-extern\"\n",
+    "corpus_to_search=\"openchn\"\n",
     "lexicon_to_search=\"molex\"\n",
     "\n",
     "# CORPUS: get [article + attributive adjective + nouns] combinations in which the adjective does not end with -e\n",
@@ -651,7 +651,7 @@
     "# run it!\n",
     "lexicon=\"molex\"\n",
     "# TODO: Maybe too much too ask all nouns? Maybe take random sample?\n",
-    "corpus_to_search=\"chn-extern\"\n",
+    "corpus_to_search=\"openchn\"\n",
     "pos=\"NOU.*\"\n",
     "\n",
     "freq_df = get_frequency_list_given_a_corpus(lexicon, pos, corpus_to_search)\n",
@@ -687,7 +687,7 @@
     "\n",
     "# Use lexica and corpora from same period\n",
     "base_lexicon1=\"molex\"\n",
-    "corpus_to_search1=\"chn-extern\"\n",
+    "corpus_to_search1=\"openchn\"\n",
     "\n",
     "base_lexicon2=\"molex\"\n",
     "corpus_to_search2=\"zeebrieven\"\n",
@@ -973,7 +973,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
