--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "from chaininglib.ui.search import create_corpus_ui\n",
-    "from chaininglib.ui.dfui import display_df, get_uploader\n",
+    "from chaininglib.ui.dfui import display_df\n",
     "\n",
     "# Create corpus UI, creates references to field contents\n",
     "corpusQueryField, corpusField = create_corpus_ui()\n"
