Few modifications according to Jesse's feedback

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -18,11 +18,12 @@
     "## List of examples\n",
     "### Corpora\n",
     " * [Corpus search](#corpus-search)\n",
-    " * [Frequency of *zeker*+verb and *vast*+verb compared](#freq-puur-zuiver)\n",
-    " * [Train a POS tagger on an annotated corpus](#pos-tagger)\n",
+    " * [Frequency of *zeker*+verb and *vast*+verb compared in a historical corpus](#freq-puur-zuiver)\n",
+    " * [Frequency of *leuk*+verb and *fijn*+verb compared in a modern corpus](#freq-leuk-fijn)\n",
     " * [Search in corpus and filter on metadata](#corpus-filter-metadata)\n",
     " * [Visualizing h-dropping](#visualizing-h-dropping)\n",
-    " * [Generate lexicon from several corpora](#lexicon-several-corpora)\n",
+    " * [Generate a lexicon from a corpus](#lexicon-from-corpus)\n",
+    " * [Train a POS tagger on an annotated historical corpus](#pos-tagger)\n",
     "\n",
     "### Lexica\n",
     " * [Lexicon search](#lexicon-search)\n",
@@ -111,11 +112,11 @@
    "source": [
     "from chaininglib.search.CorpusQuery import *\n",
     "\n",
-    "#from chaininglib import search\n",
     "query= corpusQueryField.value\n",
     "corpus_name = corpusField.value\n",
-    "df_corpus = create_corpus(corpus_name).pattern(query).search().kwic()\n",
-    "#df_corpus = load_dataframe('mijn_resultaten.csv')\n",
+    "\n",
+    "# BEWARE: we limit the results to 500 records here; not limiting may cause a search to take quite some time\n",
+    "df_corpus = create_corpus(corpus_name).pattern(query).max_results(500).search().kwic()\n",
     "display_df(df_corpus, labels=\"Results\")\n",
     "\n"
    ]
@@ -161,20 +162,65 @@
     "display_df(df_corpus2, word2)\n",
     "\n",
     "# Compute difference\n",
-    "diff_left, diff_right, intersec = column_difference(df_corpus1[\"word 1\"], df_corpus2[\"word 1\"])\n",
+    "diff_left, diff_right, intersec = column_difference(df_corpus1[\"lemma 1\"], df_corpus2[\"lemma 1\"])\n",
     "# Elements of 1 that are not in 2\n",
-    "display(HTML('Werkwoorden voor <b>' + word1 + '</b> niet in <b>' + word2 + '</b>: ' + \", \".join(diff_left)))\n",
+    "display(HTML('Werkwoorden na <b>' + word1 + '</b>, maar niet na <b>' + word2 + '</b>: ' + \", \".join(diff_left)))\n",
     "# Elements of 2 that are not in 1\n",
-    "display(HTML('Werkwoorden voor <b>' + word2 + '</b> niet in <b>' + word1 + '</b>: ' + \", \".join(diff_right)))\n",
+    "display(HTML('Werkwoorden na <b>' + word2 + '</b>, maar niet na <b>' + word1 + '</b>: ' + \", \".join(diff_right)))\n",
     "# Elements both in 1 and 2\n",
-    "display(HTML('Werkwoorden zowel voor <b>' + word1 + '</b> als voor <b>' + word2 + '</b>: ' + \", \".join(intersec)))"
+    "display(HTML('Werkwoorden zowel na <b>' + word1 + '</b> als na <b>' + word2 + '</b>: ' + \", \".join(intersec)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train a POS tagger on an annotated corpus <a class=\"anchor\" id=\"pos-tagger\"></a>"
+    "### Frequency of *leuk*+verb and *fijn*+verb compared <a class=\"anchor\" id=\"freq-leuk-fijn\"></a>\n",
+    "* Same as above, but now in modern corpus, with modern words\n",
+    "* This case study gathers much more data, so it may take more time to compute results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from chaininglib import search\n",
+    "from IPython.core.display import display, HTML\n",
+    "from chaininglib.search.CorpusQuery import *\n",
+    "from chaininglib.ui.dfui import display_df\n",
+    "from chaininglib.utils.dfops import column_difference\n",
+    "\n",
+    "corpus_name = \"opus\"\n",
+    "\n",
+    "# Word 1: puur\n",
+    "word1= \"leuk\"\n",
+    "cq1 = create_corpus(corpus_name).max_results(10000).pattern(r'[lemma=\"' + word1 + r'\"][pos=\"VRB.*\"] within <s/>')\n",
+    "df_corpus1 = cq1.search().kwic()\n",
+    "display_df(df_corpus1, word1)\n",
+    "\n",
+    "# Word 2: zuiver\n",
+    "word2 = \"fijn\"\n",
+    "cq2 = create_corpus(corpus_name).max_results(10000).pattern(r'[lemma=\"' + word2 + r'\"][pos=\"VRB.*\"] within <s/>')\n",
+    "df_corpus2 = cq2.search().kwic()\n",
+    "display_df(df_corpus2, word2)\n",
+    "\n",
+    "# Compute difference\n",
+    "diff_left, diff_right, intersec = column_difference(df_corpus1[\"lemma 1\"], df_corpus2[\"lemma 1\"])\n",
+    "# Elements of 1 that are not in 2\n",
+    "display(HTML('Werkwoorden na <b>' + word1 + '</b> niet in <b>' + word2 + '</b>: ' + \", \".join(diff_left)))\n",
+    "# Elements of 2 that are not in 1\n",
+    "display(HTML('Werkwoorden na <b>' + word2 + '</b> niet in <b>' + word1 + '</b>: ' + \", \".join(diff_right)))\n",
+    "# Elements both in 1 and 2\n",
+    "display(HTML('Werkwoorden zowel voor <b>' + word1 + '</b> als voor <b>' + word2 + '</b>: ' + \", \".join(intersec)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train a POS tagger on an annotated historical corpus and tag an historical sentence<a class=\"anchor\" id=\"pos-tagger\"></a>"
    ]
   },
   {
@@ -215,7 +261,7 @@
     "# Use the trained tagger to tag unknown sentences\n",
     "# The input must be like: tagger.tag(['today','is','a','beautiful','day'])\n",
     "\n",
-    "sentence = 'Het is mooi weer, dus gaan we in het bos lopen'\n",
+    "sentence = 'De menschen lopen wel haesteliken op enen bome ghelike een ape'\n",
     "tagged_sentence = tagger.tag( sentence.split() )\n",
     "\n",
     "print(tagged_sentence)\n",
@@ -311,10 +357,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate lexicon from several corpora <a class=\"anchor\" id=\"lexicon-several-corpora\"></a>"
+    "### Generate a lexicon from a corpus <a class=\"anchor\" id=\"lexicon-from-corpus\"></a>"
    ]
   },
   {
@@ -332,17 +392,14 @@
     "from chaininglib.process.corpus import extract_lexicon\n",
     "from chaininglib.search.CorpusQuery import *\n",
     "\n",
-    "dfs_all_corpora = []\n",
-    "for one_corpus in get_available_corpora(exclude=[\"nederlab\"]):\n",
-    "    print('querying '+one_corpus+'...')\n",
-    "    c = create_corpus(one_corpus).pos(\"NOU\").detailed_context(True).search()\n",
-    "    df_corpus = c.kwic() \n",
-    "    # store the results\n",
-    "    dfs_all_corpora.append(df_corpus)\n",
+    "corpus_name = \"zeebrieven\"\n",
     "\n",
+    "print('Querying '+corpus_name+'...')\n",
+    "c = create_corpus(corpus_name).pos(\"NOU\").detailed_context(True).search()\n",
+    "df_corpus = c.kwic() \n",
     "    \n",
     "# extract lexicon and show the result\n",
-    "extracted_lexicon = extract_lexicon(dfs_all_corpora, posColumnName=\"pos\") # For FCS: posColumnName=universal_dependency\n",
+    "extracted_lexicon = extract_lexicon(df_corpus, posColumnName=\"pos\")\n",
     "display(extracted_lexicon)"
    ]
   },
@@ -973,7 +1030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
