--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -510,14 +510,16 @@
     "from chaininglib.process.corpus import *\n",
     "from chaininglib.ui.dfui import *\n",
     "\n",
+    "# max number of records to retrieve (speed!)\n",
+    "max_nr_of_records = 50000\n",
+    "\n",
     "# do some corpus search\n",
-    "print('This can take a few seconds... please wait!')\n",
+    "print('This can take a while... please wait!')\n",
     "\n",
     "corpus_to_search=\"openchn\"\n",
-    "df_corpus = create_corpus(corpus_to_search).detailed_context(True).pos(\"NOU.*\").search().kwic()\n",
+    "df_corpus = create_corpus(corpus_to_search).detailed_context(True).pos(\"NOU.*\").max_results(max_nr_of_records).search().kwic()\n",
     "\n",
     "# compute and display a table of the frequencies of the lemmata\n",
-    "\n",
     "freq_df = get_frequency_list(df_corpus)\n",
     "display_df(freq_df)"
    ]
@@ -555,13 +557,16 @@
     "\n",
     "# CORPUS: get [article + attributive adjective + nouns] combinations in which the adjective does not end with -e\n",
     "print('Get occurences of attributive adjectives not ending with -e')\n",
-    "cq = create_corpus(corpus_to_search).pattern(r'[lemma=\"de|het\"][word=\"^g(.+)[^e]$\" & pos=\"AA.*\"][pos=\"NOU.*\"]')\n",
+    "cq = create_corpus(corpus_to_search).pattern(r'[lemma=\"de|het\"][word=\"^g(.+)[^e]$\" & pos=\"AA.*degree=pos.*\"][pos=\"NOU.*\"]')\n",
     "df_corpus = cq.search().kwic()\n",
     "display(df_corpus)\n",
     "\n",
-    "# LEXICON: get adjectives the lemma of which does not end with -e\n",
-    "lq = create_lexicon(lexicon_to_search).lemma('^g(.+)[^e]$').pos('ADJ').search()\n",
+    "# LEXICON: get adjectives the lemma of which does not end with -e \n",
+    "#lq = create_lexicon(lexicon_to_search).lemma('^g(.+)[^e]$').pos('ADJ').search()\n",
+    "lq = create_lexicon(lexicon_to_search).lemma('^g(.+)[^e]$').pos('ADJ(degree=pos)').search()\n",
     "df_lexicon = lq.search().kwic()\n",
+    "\n",
+    "display(df_lexicon)\n",
     "\n",
     "# LEXICON: get adjectives having a final -e in definite attributive use\n",
     "print('Filtering lexicon results')\n",
