Solved get_rank_diff replace mistake in Examples; Solved warming 'Sorting because non-concatenation axis is not aligned. A future version of pandas will change to not sort by default.'

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -765,7 +765,7 @@
    },
    "outputs": [],
    "source": [
-    "from chaininglib.utils.dfops import get_relfreq_diff\n",
+    "from chaininglib.utils.dfops import get_rank_diff\n",
     "from chaininglib.ui.dfui import display_df\n",
     "\n",
     "# For this case study, you need to run the previous case study first, because it generates a function we need here\n",
@@ -801,7 +801,7 @@
     "# compute the rank diff of lemmata in frequency tables\n",
     "\n",
     "# sort and display\n",
-    "df_rankdiffs = get_relfreq_diff(df_frequency_list1, df_frequency_list2, index='lemmas')\n",
+    "df_rankdiffs = get_rank_diff(df_frequency_list1, df_frequency_list2, index='lemmas')\n",
     "\n",
     "display_df(df_rankdiffs.sort_values(by=['rank_diff']).head(25), labels='Differences in ranks')\n",
     "\n",
@@ -1058,7 +1058,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
