removed comments from case study paper

--- a/contrib/Case_study_paper.ipynb
+++ b/contrib/Case_study_paper.ipynb
@@ -34,7 +34,6 @@
     "from chaininglib.search.CorpusQuery import *\n",
     "\n",
     "\n",
-    "# TODO: query all lemmas (not just b), maybe only NOU to keep it lighter\n",
     "corpus_name=\"zeebrieven\"\n",
     "query=r'[pos=\"NOU\"]'\n",
     "fields = get_available_metadata(corpus_name)\n",
@@ -131,7 +130,6 @@
    "outputs": [],
    "source": [
     "df_relfreq_diff = {}\n",
-    "#from chaininglib.utils.dfops import join_df\n",
     "\n",
     "for era in eras:\n",
     "    soc_class_pairs = itertools.combinations(soc_classes,2)\n",
@@ -143,9 +141,7 @@
     "        display_df(df_relfreq_diff.sort_values(by=\"relfreq_diff\", ascending=True).head(SHOW), labels=label_df2)\n",
     "        \n",
     "        d1 = df_relfreq_diff.sort_values(by=\"relfreq_diff\", ascending=False).head(SHOW)\n",
-    "        d2 = df_relfreq_diff.sort_values(by=\"relfreq_diff\", ascending=True).head(SHOW)\n",
-    "        #j = join_df([d1,d2])\n",
-    "        #display_df(j)\n"
+    "        d2 = df_relfreq_diff.sort_values(by=\"relfreq_diff\", ascending=True).head(SHOW)\n"
    ]
   },
   {
@@ -298,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
